# leads-bot

./: .env.example  .gitignore  BACKLOG.md  README.md  pyproject.toml  requirements.txt  smoke_all.txt
agents/: _constants.py  _email_patterns.py  _gemini_wrapper.py  _models.py  company_hunter.py  contact_enricher.py  decision_maker_finder.py  icp_strategist.py  message_writer.py  personalizer.py  qualifier.py  validator.py
config/: icp_configs.json  logging_config.py  settings.py
dashboard/: __init__.py  streamlit_app.py
data/: checkpoints.db-shm  checkpoints.db-wal
orchestrator/: __init__.py  agents_registry.py  graph.py  nodes.py  runner.py  state.py
scripts/: init_db.py  migrate_phase8.py  run_pipeline.py  show_icp.py  smoke_test_sources.py  test_contact_enricher.py  test_decision_maker.py  test_hunter.py  test_messages.py  test_qualifier.py  test_telegram_digest.py  verify_setup.py
sinks/: google_sheets_sink.py  sink_orchestrator.py  sqlite_store.py  sqlite_writer.py  telegram_sink.py
sources/: _article_extract.py  _cache.py  _gemini.py  _utils.py  abstract_api_client.py  apify_client.py  base.py  companies_api_client.py  crunchbase_apify.py  hunter_client.py  models.py  newsdata_client.py  rss_feeds.py  scrapegraph_client.py  serpapi_client.py  smtp_verifier.py  vibe_prospecting.py  wellfound_apify.py
tests/: conftest.py  test_abstract_api_client.py  test_apify_client.py  test_article_extract.py  test_companies_api_client.py  test_company_hunter.py  test_contact_enricher.py  test_dashboard.py  test_decision_maker_finder.py  test_discovery_sources.py  (+26 more)
(+24 files in other folders)
